--- a/Output/STM32_BLDC_Hall.build_log.htm
+++ b/Output/STM32_BLDC_Hall.build_log.htm
@@ -22,12 +22,31 @@ Dialog DLL:      TARMSTM.DLL V1.66.0.0
  
 <h2>Project:</h2>
 d:\prog\STM32\STM32\stm32\STM32prog\BLDC_PWM_Hall_vscode\Project\STM32_BLDC_Halll_V17_3.uvprojx
-Project File Date:  10/29/2024
+Project File Date:  10/31/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32_BLDC_Hall_V17_3'
-".\Output\STM32_BLDC_Hall.elf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+compiling stm32f10x_it.c...
+compiling ADC_int.c...
+compiling CAN.c...
+compiling GPIO_int.c...
+compiling PI_Cale.c...
+compiling Task_function.c...
+compiling ThreeHall.c...
+compiling Tim1_ISR_MCLoop.c...
+compiling Tim1_PWM.c...
+compiling Tim4_Encoder_PWMDAC.c...
+compiling Timer.c...
+compiling Usart_RS232.c...
+User_program\Usart_RS232.c(92): warning:  #550-D: variable "ccw"  was set but never used
+        int ccw;
+User_program\Usart_RS232.c: 1 warning, 0 errors
+linking...
+Program Size: Code=21836 RO-data=1804 RW-data=296 ZI-data=1536  
+FromELF: creating hex file...
+".\Output\STM32_BLDC_Hall.elf" - 0 Error(s), 1 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   d:\prog\STM32\STM32\stm32\STM32prog\BLDC_PWM_Hall_vscode\Project\RTE
