--- a/Output/STM32_BLDC_Hall.build_log.htm
+++ b/Output/STM32_BLDC_Hall.build_log.htm
@@ -28,10 +28,27 @@ Project File Date:  10/31/2024
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32_BLDC_Hall_V17_3'
 compiling main.c...
+main.c(139): warning:  #223-D: function "hello_world" declared implicitly
+          hello_world();
+main.c: 1 warning, 0 errors
+compiling stm32f10x_it.c...
+compiling ADC_int.c...
+compiling IQ_math.c...
+compiling PI_Cale.c...
+compiling Task_function.c...
+compiling ThreeHall.c...
+compiling Tim1_ISR_MCLoop.c...
+compiling Tim1_PWM.c...
+compiling Tim4_Encoder_PWMDAC.c...
+compiling Timer.c...
+compiling Usart_RS232.c...
+User_program\Usart_RS232.c(92): warning:  #550-D: variable "ccw"  was set but never used
+        int ccw;
+User_program\Usart_RS232.c: 1 warning, 0 errors
 linking...
-Program Size: Code=14708 RO-data=1804 RW-data=264 ZI-data=1496  
+Program Size: Code=14780 RO-data=1804 RW-data=268 ZI-data=1492  
 FromELF: creating hex file...
-".\Output\STM32_BLDC_Hall.elf" - 0 Error(s), 0 Warning(s).
+".\Output\STM32_BLDC_Hall.elf" - 0 Error(s), 2 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   d:\prog\STM32\STM32\stm32\STM32prog\BLDC_PWM_Hall_vscode\Project\RTE
