--- a/Output/STM32_BLDC_Hall.build_log.htm
+++ b/Output/STM32_BLDC_Hall.build_log.htm
@@ -27,9 +27,7 @@ Project File Date:  10/31/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32_BLDC_Hall_V17_3'
-compiling main.c...
-compiling ADC_int.c...
-compiling Task_function.c...
+compiling IQ_math.c...
 linking...
 Program Size: Code=14700 RO-data=1804 RW-data=264 ZI-data=1496  
 FromELF: creating hex file...
